--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Diagnose .vue files and js bundle within Weex context",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/unit/diagnose.js"
   },
   "keywords": [
     "weex",
