--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
   "dependencies": {
     "chai": "^4.0.0",
     "commander": "^2.9.0",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "jsonfile": "^3.0.0",
+    "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
+    "recursive-readdir": "^2.2.1",
     "semver": "^5.3.0",
+    "style-loader": "^0.18.1",
+    "template-compiler": "^1.2.1",
+    "vue-loader": "^12.2.1",
     "webpack": "^2.6.1",
+    "weex-loader": "^0.4.4",
     "weex-style-validator": "^0.1.0",
     "weex-template-compiler": "^2.2.2-weex.1",
     "weex-vue-loader": "^0.2.12"
