--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "template-compiler": "^1.2.1",
     "vue-loader": "^12.2.1",
     "webpack": "^2.6.1",
+    "weex-js-runtime": "^0.20.5",
     "weex-loader": "^0.4.4",
     "weex-style-validator": "^0.1.0",
     "weex-template-compiler": "^2.2.2-weex.1",
+    "weex-vdom-tester": "^0.2.0",
+    "weex-vue-framework": "^2.3.3-weex.1",
     "weex-vue-loader": "^0.2.12"
   }
 }
