--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "jsonfile": "^3.0.0",
+    "lodash": "^4.17.4",
     "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
     "recursive-readdir": "^2.2.1",
@@ -36,6 +37,7 @@
     "weex-rax-framework": "^0.4.7",
     "weex-style-validator": "^0.1.0",
     "weex-template-compiler": "^2.2.2-weex.1",
+    "weex-vanilla-framework": "^0.20.6",
     "weex-vdom-tester": "^0.2.0",
     "weex-vue-framework": "^2.4.2-weex.2",
     "weex-vue-loader": "^0.4.0"
