--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Hanks <zhanghan.me@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "atob": "^2.0.3",
+    "btoa": "^1.1.2",
     "chai": "^4.0.0",
     "commander": "^2.11.0",
     "css-loader": "^0.28.4",
