--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "license": "MIT",
   "dependencies": {
     "atob": "^2.0.3",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "btoa": "^1.1.2",
     "chai": "^4.0.0",
+    "chalk": "^2.1.0",
     "commander": "^2.11.0",
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
+    "find-cache-dir": "^1.0.0",
     "jsonfile": "^3.0.0",
     "lodash": "^4.17.4",
     "memory-fs": "^0.4.1",
@@ -31,11 +35,12 @@
     "semver": "^5.3.0",
     "style-loader": "^0.18.1",
     "template-compiler": "^1.2.1",
-    "vue-loader": "^12.2.1",
+    "vue-loader": "^12.2.2",
+    "vue-style-loader": "^3.0.1",
     "webpack": "^2.6.1",
     "weex-js-runtime": "^0.21.7",
     "weex-legacy-framework": "^0.21.6",
-    "weex-loader": "^0.4.4",
+    "weex-loader": "^0.4.5",
     "weex-rax-framework": "^0.4.7",
     "weex-style-validator": "^0.1.0",
     "weex-template-compiler": "^2.2.2-weex.1",
