--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-style-loader": "^3.0.1",
     "webpack": "^2.6.1",
     "weex-js-runtime": "^0.21.7",
+    "weex-js-runtime-packages": "^0.21.9",
     "weex-legacy-framework": "^0.21.6",
     "weex-loader": "^0.4.5",
     "weex-rax-framework": "^0.4.7",
@@ -47,6 +48,7 @@
     "weex-vanilla-framework": "^0.21.7",
     "weex-vdom-tester": "^0.2.0",
     "weex-vue-framework": "^2.4.2-weex.2",
+    "weex-vue-framework-packages": "^1.0.0",
     "weex-vue-loader": "^0.4.0"
   }
 }
