--- a/package.json
+++ b/package.json
@@ -47,11 +47,15 @@
     "weex-loader": "^0.4.5",
     "weex-rax-framework": "^0.4.7",
     "weex-style-validator": "^0.1.0",
+    "weex-styler": "^0.2.2",
     "weex-template-compiler": "^2.2.2-weex.1",
     "weex-vanilla-framework": "^0.21.7",
     "weex-vdom-tester": "^0.2.0",
     "weex-vue-framework": "^2.4.2-weex.2",
     "weex-vue-framework-packages": "^1.0.0",
     "weex-vue-loader": "^0.4.0"
+  },
+  "devDependencies": {
+    "cheerio": "^1.0.0-rc.2"
   }
 }
