--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weex-lint",
+  "name": "weex-diagnose",
   "version": "0.1.0",
   "description": "Diagnose .vue files and js bundle within Weex context",
   "main": "index.js",
@@ -25,6 +25,7 @@
     "btoa": "^1.1.2",
     "chai": "^4.0.0",
     "chalk": "^2.1.0",
+    "cheerio": "^1.0.0-rc.2",
     "commander": "^2.11.0",
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
@@ -54,8 +55,5 @@
     "weex-vue-framework": "^2.4.2-weex.2",
     "weex-vue-framework-packages": "^1.0.0",
     "weex-vue-loader": "^0.4.0"
-  },
-  "devDependencies": {
-    "cheerio": "^1.0.0-rc.2"
   }
 }
