--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "md5": "^2.2.1",
     "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
+    "parse5": "^3.0.2",
     "recursive-readdir": "^2.2.1",
     "semver": "^5.3.0",
     "style-loader": "^0.18.1",
