--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "recursive-readdir": "^2.2.1",
     "semver": "^5.3.0",
     "style-loader": "^0.18.1",
+    "stylus": "^0.54.5",
     "template-compiler": "^1.2.1",
     "vue-loader": "^12.2.2",
     "vue-style-loader": "^3.0.1",
@@ -49,8 +50,8 @@
     "weex-loader": "^0.4.5",
     "weex-rax-framework": "^0.4.7",
     "weex-style-validator": "^0.1.0",
-    "weex-styler": "^0.2.2",
-    "weex-template-compiler": "^2.2.2-weex.1",
+    "weex-styler": "^0.2.3",
+    "weex-template-compiler": "^2.4.2-weex.3",
     "weex-vanilla-framework": "^0.21.7",
     "weex-vdom-tester": "^0.2.0",
     "weex-vue-framework": "^2.4.2-weex.2",
